docs: Fix Horizontal Scroll Overflow in Rule Description on Mobile View (#19304)
* docs: Fix Horizontal Scroll Overflow in Rule Description on Mobile View

* Update rules.scss

--- a/docs/src/assets/scss/components/rules.scss
+++ b/docs/src/assets/scss/components/rules.scss
@@ -87,6 +87,7 @@
 
 .rule__content {
     flex: 1 1 35ch;
+    overflow-x: auto;
 }
 
 .rule__name_wrapper {
